--- a/src/app/modules/authentication/profile/list/profile-list.component.html
+++ b/src/app/modules/authentication/profile/list/profile-list.component.html
@@ -1,4 +1,8 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
+<div *ngIf="loading" class="loading">
+    <img src="assets/icons/loadingapp.svg" alt="Carregando...">
+</div>
+
+<div *ngIf="!loading" class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
     <!-- Header -->
     <div
         class="
@@ -88,7 +92,7 @@
         cdkScrollable
         [ngClass]="{ hidden: dataSource.length == 0 }"
     >
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" style="width: 100%;" class="mat-elevation-z8">
             <ng-container matColumnDef="descricao">
                 <th mat-header-cell *matHeaderCellDef>Descrição</th>
                 <td mat-cell *matCellDef="let element">
@@ -144,3 +148,9 @@
         Nenhum registro encontrado
     </div>
 </div>
+
+<!-- Alert -->
+<fuse-alert class="mt-8 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
+    [@shake]="alert.type === 'error'">
+    {{alert.message}}
+</fuse-alert>
