--- a/src/app/modules/authentication/user/list/user-list.component.html
+++ b/src/app/modules/authentication/user/list/user-list.component.html
@@ -2,7 +2,7 @@
     <img src="assets/icons/loadingapp.svg" alt="Carregando...">
 </div>
 
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
+<div *ngIf="!loading" class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
     <!-- Header -->
     <div
         class="
@@ -110,7 +110,9 @@
 
                 <ng-container matColumnDef="profile">
                     <th mat-header-cell *matHeaderCellDef>Perfil</th>
-                    <td mat-cell *matCellDef="let element">Administrador</td>
+                    <td mat-cell *matCellDef="let element">
+                        {{ element.profile.descricao.toUpperCase() }}
+                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
@@ -165,3 +167,9 @@
         Nenhum registro encontrado
     </div>
 </div>
+
+<!-- Alert -->
+<fuse-alert class="mt-8 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
+    [@shake]="alert.type === 'error'">
+    {{alert.message}}
+</fuse-alert>
