--- a/src/app/modules/operations/service/list/service-list.component.html
+++ b/src/app/modules/operations/service/list/service-list.component.html
@@ -148,3 +148,9 @@
         Nenhum registro encontrado
     </div>
 </div>
+
+<!-- Alert -->
+<fuse-alert class="mt-8 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
+    [@shake]="alert.type === 'error'">
+    {{alert.message}}
+</fuse-alert>
