--- a/src/app/modules/operations/schedule/list/schedule-list.component.html
+++ b/src/app/modules/operations/schedule/list/schedule-list.component.html
@@ -82,7 +82,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="dataOperacao">
-                <th mat-header-cell *matHeaderCellDef>Cliente</th>
+                <th mat-header-cell *matHeaderCellDef>Data</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.dataOperacao }}
                 </td>
