--- a/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
+++ b/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
@@ -25,7 +25,7 @@
                     <div class="flex items-center ml-1 whitespace-nowrap">
                         <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'">
                         </mat-icon>
-                        <span class="ml-1 text-secondary">Cliente</span>
+                        <span class="ml-1 text-secondary">Realizados</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -53,7 +53,7 @@
                         sm:leading-10
                         truncate
                     ">
-                    Lista de clientes
+                    Lista de Realizados
                 </h2>
             </div>
         </div>
@@ -69,16 +69,46 @@
     <!-- Main -->
     <div class="flex-auto p-6 sm:p-10 overflow-y-auto" cdkScrollable [ngClass]="{ hidden: dataSource.length == 0 }">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>Código</th>
+            <ng-container matColumnDef="servicoId">
+                <th mat-header-cell *matHeaderCellDef>Serviço</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.id }}
+                    {{ getElement('servico', element.service) }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="nome">
-                <th mat-header-cell *matHeaderCellDef>Nome</th>
+            <ng-container matColumnDef="usuarioId">
+                <th mat-header-cell *matHeaderCellDef>Colaborador</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.nome }}
+                    {{ getElement('usuario', element.user) }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="clienteId">
+                <th mat-header-cell *matHeaderCellDef>Cliente</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ getElement('cliente', element.client) }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="data">
+                <th mat-header-cell *matHeaderCellDef>Data</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.data }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="hora">
+                <th mat-header-cell *matHeaderCellDef>Hora</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.hora }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="confirmado">
+                <th mat-header-cell *matHeaderCellDef>Confirmado</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ getElement('confirmado', element.cancelado)}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="cancelado">
+                <th mat-header-cell *matHeaderCellDef>Cancelado</th>
+                <td [ngClass]="getClass(element)" mat-cell *matCellDef="let element">
+                    {{ getElement('cancelado', element.cancelado)}}
                 </td>
             </ng-container>
 
@@ -91,13 +121,9 @@
                         <mat-icon>more_horiz</mat-icon>
                     </button>
                     <mat-menu #actionsMenu="matMenu" yPosition="below" xPosition="before">
-                        <button mat-menu-item (click)="editRow(element)">
-                            <mat-icon>edit</mat-icon>
-                            <span>Editar</span>
-                        </button>
-                        <button mat-menu-item (click)="deleteRow(element)">
-                            <mat-icon>delete</mat-icon>
-                            <span>Excluir</span>
+                        <button mat-menu-item (click)="cancelRow(element)">
+                            <mat-icon>cancel</mat-icon>
+                            <span>Cancelar</span>
                         </button>
                     </mat-menu>
                 </mat-cell>
