--- a/src/app/modules/operations/service/list/service-list.component.html
+++ b/src/app/modules/operations/service/list/service-list.component.html
@@ -23,7 +23,7 @@
                 <div class="hidden sm:flex flex-wrap items-center font-medium">
                     <div>
                         <a class="whitespace-nowrap text-primary-500"
-                            >Autenticação</a
+                            >Operação</a
                         >
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
