--- a/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
+++ b/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
@@ -58,12 +58,12 @@
             </div>
         </div>
         <!-- Actions -->
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <!-- <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <button class="ml-3" mat-flat-button [color]="'accent'" (click)="newForm()">
                 <mat-icon class="icon-size-5 mr-2" [svgIcon]="'heroicons_solid:pencil-alt'"></mat-icon>
                 Novo
             </button>
-        </div>
+        </div> -->
     </div>
 
     <!-- Main -->
